--- a/front-end/consultant_conform_appo.html
+++ b/front-end/consultant_conform_appo.html
@@ -63,7 +63,21 @@
             time.textContent = element.time;
             message.textContent = element.message;
             actionButton_done.textContent = "Done";
-            //actionButton.setAttribute("appointmentId", element.appointmentId);
+            
+            // Add CSS styles to the button
+            actionButton_done.setAttribute("class", "done-button");
+            const style = document.createElement("style");
+            style.innerHTML = `
+            .done-button {
+              background-color: blue;
+              color: white;
+              padding: 5px;
+              width: 70px;
+              border-radius: 5px;
+              cursor: pointer;
+            }
+            `;
+            document.head.appendChild(style);
 
             tableBody.appendChild(row);
             row.appendChild(appointmentId);
