--- a/front-end/seekers_navbar.html
+++ b/front-end/seekers_navbar.html
@@ -24,7 +24,7 @@
           />
           <span
             class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Flowbite</span
+            >The Jobs</span
           >
         </a>
         <div class="flex items-center md:order-2">
