--- a/front-end/seekers_make_appointment.html
+++ b/front-end/seekers_make_appointment.html
@@ -36,7 +36,7 @@
         this.message.value,
         this.status.value);"
       >
-        <div class="mb-6">
+        <div class="mb-6" style="display: none;">
           <input
             type="text"
             id="seekerId"
@@ -44,7 +44,7 @@
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           />
         </div>
-        <div class="mb-6">
+        <div class="mb-6" style="display: none;">
           <input
             type="text"
             id="consultantId"
@@ -53,7 +53,7 @@
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           />
         </div>
-        <div class="mb-6">
+        <div class="mb-6" style="display: none;">
           <input
             type="text"
             id="status"
