--- a/front-end/consultant_login.html
+++ b/front-end/consultant_login.html
@@ -78,14 +78,14 @@
           .then((response) => {
             if (response.ok) {
               alert("Login successful!");
-              return response.json();
+              response.json().then((data) => {
+                const consultantId = data;
+                sessionStorage.setItem("consultant_id", consultantId);
+                window.location.href = "consultant_dashboard.html";
+              });
             } else {
               alert("Login failed!");
             }
-          })
-          .then((consultantId) => {
-            sessionStorage.setItem("consultant_id", consultantId);
-            window.location.href = "consultant_dashboard.html";
           })
           .catch((error) => {
             alert("Error: " + error);
