--- a/front-end/admin_all_seekers.html
+++ b/front-end/admin_all_seekers.html
@@ -105,7 +105,7 @@
               <th>Consultant ID</th>
               <th>First Name</th>
               <th>Last Name</th>
-              <th>Category</th>
+              <th>Age</th>
               <th>Email</th>
               <th>Phone No</th>
               <th>Action</th>
