--- a/front-end/consultant_edit_availability.html
+++ b/front-end/consultant_edit_availability.html
@@ -111,6 +111,7 @@
               >
                 <option>Available</option>
                 <option>Not Available</option>
+                <option>Booked</option>
               </select>
             </div>
           </div>
@@ -129,7 +130,10 @@
 
     <script>
       function edit_availability(availabilityId, date, time, availability) {
-        fetch("http://localhost:8080/EditAvailability", {
+        // Get id from URL parameters
+        const urlParams = new URLSearchParams(window.location.search);
+        const id = urlParams.get("id");
+        fetch(`http://localhost:8080/EditAvailability/${id}`, {
           method: "PUT",
           headers: {
             "Content-Type": "application/json",
@@ -144,6 +148,7 @@
           .then((response) => {
             if (response.ok) {
               alert("successful!");
+              window.location.href = "consultant_availability.html";
             } else {
               alert("failed!");
             }
@@ -152,6 +157,21 @@
             alert("Error: " + error);
           });
       }
+    </script>
+
+    <script>
+      // Get URL parameters using JavaScript
+      const urlParams = new URLSearchParams(window.location.search);
+      const id = urlParams.get("id");
+      const date = urlParams.get("date");
+      const time = urlParams.get("time");
+      const availability = urlParams.get("availability");
+
+      // Display the parameters on the page
+      document.getElementById("availabilityId").value = id;
+      document.getElementById("date").value = date;
+      document.getElementById("time").value = time;
+      document.getElementById("availability").value = availability;
     </script>
   </body>
 </html>
