--- a/front-end/admin_login.html
+++ b/front-end/admin_login.html
@@ -77,6 +77,7 @@
         })
           .then((response) => {
             if (response.ok) {
+              alert("Login successful!");
               response.json().then((data) => {
                 const adminId = data;
                 sessionStorage.setItem("admin_id", adminId);
