--- a/front-end/seeker_login.html
+++ b/front-end/seeker_login.html
@@ -77,6 +77,7 @@
         })
           .then((response) => {
             if (response.ok) {
+              alert("Login successful!");
               response.json().then((data) => {
                 const seekerId = data;
                 sessionStorage.setItem("seeker_id", seekerId);
