--- a/front-end/seeker_login.html
+++ b/front-end/seeker_login.html
@@ -59,7 +59,11 @@
           style="width: 100%"
         >
           Login
-        </button>
+        </button><br><br>
+        <label
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >If you are new to The Jobs? <u><a href="seeker_register.html">Create an account</a></u></label
+          >
       </form>
     </div>
 
